# hc-grc

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING_DOCS.md  INCIDENTS.md  KICKOFF_READINESS.md  LICENSE  Makefile  OVERVIEW.md  PROJECT_STRUCTURE.md  README.md  conftest.py  docker-compose.yml  lab_notebook.md  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt
.claude/agents/: README.md  agent-organizer.md  data-engineer.md  data-scientist-adversary.md  data-scientist.md  documentation-engineer.md  first-principles-thinking.md  knowledge-synthesizer.md  llm-architect-adversary.md  llm-architect.md  ml-engineer.md  multi-agent-coordinator.md  nlp-engineer.md  research-analyst.md  technical-writer.md
.dvc/: config
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: agent-sync-check.yml  certificate-completeness.yml  docs-sync.yml  independence-lint.yml  lint-docs.yml  pin-docker-digest.yml  prereg-freeze-guard.yml  provenance-integrity.yml  python-quality.yml  registry-validate.yml  repro-smoke.yml  test.yml  upstream-update-check.yml
agents/: AGENT_TEMPLATE.md  CARDS_SPEC.md  MCP_REGISTRY.md  MODEL_TIER_ASSIGNMENTS.md  README.md
agents/adversarial-review/: README.md  _TEMPLATE.md  arbiter.md  data-engineer-adversary.md  documentation-engineer-adversary.md  knowledge-synthesizer-adversary.md  ml-engineer-adversary.md  nlp-engineer-adversary.md  technical-writer-adversary.md
analysis/01-exploratory/: README.md
analysis/02-confirmatory/: README.md
ara/: ARA_SPEC.md
configs/: platform.yaml  seeds.yaml
data/: codebook.md
docs/: AGENT_SYSTEM.md  BRANCHING.md  CI.md  COORDINATOR_CRON_PROTOCOL.md  GIT_WORKFLOW_IMPLEMENTATION.md  LEDGER.md  ORCHESTRATOR_PROTOCOL.md  PREREGISTRATION.md  PROGRAM_ROADMAP.md  REGISTRY.md  REPRODUCIBILITY.md  STAGE_GATES.yaml  UPSTREAM_SOURCES.md
docs/architecture/: AGENT_WORKFLOW.md  GATES.md  HARDENING_LOG.md  INFRASTRUCTURE.md  PROVENANCE_MODEL.md  RUNBOOK.md  RUN_MANIFEST.md  SKILLS_ASSESSMENT.md  SOFTWARE_ARCHITECTURE.md  SWARM_IMPLEMENTATION_ROADMAP.md
docs/charter/: FRAMEWORK_RELATIONSHIPS.md  PROJECT_CHARTER.md  RESEARCH_DESIGN.md  RISK_CONSTITUTION.md  SCF_CONSTITUTION.md
docs/decisions/: 0001-langgraph-as-orchestration-framework.md  0002-local-first-data-sovereign-architecture.md  0003-prov-dm-as-provenance-vocabulary.md  0004-five-gate-topology.md  0005-agent-card-format.md  0006-nist-cluster-independence-constraint.md  0007-exploratory-first-pre-registered-confirmatory.md  ADR-0008-supervisor-hybrid-architecture.md  ADR-0009-local-observability-stack.md  ADR-0010-three-tier-research-program.md  ADR-0011-resilience-and-fault-tolerance.md  ADR-0012-autonomous-iterative-research-architecture.md  ADR-0013-research-design-reframe-strm-as-secondary.md  ADR-0014-platform-infrastructure-and-governance-dispatch.md  ADR-0015-architecture-integrity-decisions.md  ADR-0016-llm-execution-routing.md  ADVERSARIAL_FINDINGS.md
docs/literature/: multi_agent_docs_survey.md  search_strategy.md  synthesis.md
docs/protocol/: 00_research_questions.md  01_theoretical_framework.md  02_contribution.md  03_statistical_analysis_plan.md  04_methods_scaffolding.md  HYPOTHESIS_TEMPLATE.md  PREREGISTRATION_LEDGER.md  STUDY_DESIGN_TEMPLATE.md
docs/research/: T01-regulatory-benchmarks.md
frameworks/_TEMPLATE/: STUDY_CHARTER.md
frameworks/cis-v8/: STUDY_CHARTER.md
frameworks/nist-800-171/: STUDY_CHARTER.md
frameworks/nist-800-53/: STUDY_CHARTER.md
frameworks/nist-csf-2.0/: STUDY_CHARTER.md
reports/: eda_summary.md
repro/: Dockerfile  seeds.py
reproducibility/: README.md
scripts/: capture-transcript.py  capture-transcript.sh  check_doc_drift.py  seed_github_issues.sh  setup-branch-protection.sh  stage_gate.py  sync-agents.sh
src/: __init__.py  checkpointer.py  graph.py  grounding.py  reasoning_client.py  state.py
synthesis/: SYNTHESIS_PLAN.md
tests/: test_observability.py  test_reasoning_client.py  test_stage_gate.py
tools/: generate_docs.py
transcripts/: coordinator-run-2026-06-08T17:41:46Z.md
(+143 files in other folders)
