[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hc-grc"
version = "0.1.0"
description = "Autonomous scientific research platform for empirical analysis of the Secure Controls Framework"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "Thomas Jones", email = "thehipsterciso@protonmail.com" }
]
keywords = ["security", "grc", "nlp", "machine-learning", "research"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.1",
  "black>=23.0",
  "pre-commit>=3.5",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
# Promote LangGraph deprecations to errors so a deprecated API (e.g. add_node
# retry= vs retry_policy=) fails the suite instead of silently shipping until the
# next major breaks it (#206).
filterwarnings = [
    "error::langgraph.warnings.LangGraphDeprecationWarning",
]
